case study added